--- a/Profile/style.css
+++ b/Profile/style.css
@@ -17,6 +17,8 @@ body {
   background-color: #05B6C1;
 }
 
+/* Add the Font Awesome library (if not already added) */
+
 .navbar {
   background-color: #f8f9fa;
   padding: 10px 20px;
@@ -32,10 +34,69 @@ body {
   z-index: 11;
 }
 
+.navbar .navbar-content {
+  display: flex;
+  align-items: center;
+}
+
 .navbar .navbar-brand {
   color: #05B6C1;
   text-decoration: none;
 }
+
+.navbar .searchArea {
+  margin-left: auto;
+}
+
+.navbar .alagchezen {
+  display: flex;
+}
+
+.navbar .alagchezen a {
+  margin-right: 10px;
+  display: block;
+}
+
+.navbar .menu-toggle {
+  display: none;
+  cursor: pointer;
+  margin-left: auto;
+}
+
+.navbar .dropdown-menu {
+  display: none;
+  position: absolute;
+  background-color: #f8f9fa;
+  padding: 10px;
+  box-shadow: 0px 6px 4px 1px rgba(0, 0, 0, 0.25);
+  z-index: 10;
+}
+
+.navbar .dropdown-menu a {
+  display: block;
+  padding: 5px 0;
+  color: #343a40;
+  text-decoration: none;
+}
+
+/* Hide the dropdown menu initially */
+@media (max-width: 720px) {
+
+  .navbar .navbar-content,
+  .navbar .alagchezen {
+    display: none;
+  }
+
+  .navbar .menu-toggle {
+    display: flex;
+  }
+
+  .navbar .dropdown-menu {
+    display: block;
+  }
+}
+
+
 
 .searchArea {
   display: flex;
@@ -99,22 +160,12 @@ body {
   border-radius: 5px;
 }
 
-.navbar .dropdownkeclickperanewalelist .dropdown-item {
-  color: #343a40;
-  text-decoration: none;
-  display: block;
-  padding: 5px 10px;
-  cursor: pointer;
-}
-
-.navbar .dropdownkeclickperanewalelist .dropdown-item:hover {
-  background-color: #ccc;
-}
 
 .row {
   display: flex;
   justify-content: space-evenly;
   margin-top: 40px;
+  flex-wrap: wrap;
 }
 
 .boxStyle {
@@ -122,12 +173,12 @@ body {
   border-radius: 5px;
   padding: 10px;
   margin: 10px 0px;
-  
+
 }
 
 .boxStylekabhai {
   background-color: #f8f9fa;
-  position: sticky;
+  position: static;
   width: 300px;
   border-radius: 5px;
   margin: 10px 0px;
@@ -135,6 +186,7 @@ body {
   max-height: 300px;
   min-height: 200px;
   top: 140px;
+  z-index: 10;
 }
 
 .profilePicture {
@@ -198,20 +250,25 @@ body {
   font-family: 'Inter';
 }
 
-.modalbody {
+.modalbody,
+.modaltwoboy {
   background-color: rgba(0, 0, 0, 0.25);
-  position: absolute;
+  position: sticky;
   top: 0;
   left: 0;
   width: 100vw;
   height: 100vh;
-  z-index: 2;
+  z-index: 20;
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
-.modal {
+.modalbody {
+  position: absolute !important;
+}
+
+.modalofedit{
   padding: 10px;
   width: 40%;
   min-height: 30%;
@@ -219,6 +276,26 @@ body {
   background-color: white;
   border-radius: 10px;
   box-shadow: 1px 1px 10px 10px rgba(0, 0, 0, 20%);
+  z-index: 20;
+}
+
+.modal,
+.twomodal{
+  padding: 10px;
+  width: 40%;
+  min-height: 30%;
+  max-height: 60%;
+  background-color: white;
+  border-radius: 10px;
+  box-shadow: 1px 1px 10px 10px rgba(0, 0, 0, 20%);
+  z-index: 20;
+}
+
+.twomodal {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
 }
 
 .postwalatasweer {
@@ -270,6 +347,21 @@ textarea.form-control {
   background-color: #00d0de;
 }
 
+.closebtnofedit{
+  background-color: #05B6C1;
+  border: 0px;
+  color: white;
+  border-radius: 8px;
+  float: right;
+  width: 60px;
+  height: 35px;
+  margin: 10px;
+}
+
+.closebtnofedit:hover{
+  background-color: #00d0de;
+}
+
 .no2pagalhaiyebutton {
   background-color: rgb(4, 80, 107);
   border: 0px;
@@ -282,6 +374,21 @@ textarea.form-control {
 }
 
 .no2pagalhaiyebutton:hover {
+  background-color: rgb(70, 165, 202);
+}
+
+.editbtn{
+  background-color: rgb(4, 80, 107);
+  border: 0px;
+  color: white;
+  border-radius: 8px;
+  float: right;
+  width: 60px;
+  height: 35px;
+  margin: 10px;
+}
+
+.editbtn:hover{
   background-color: rgb(70, 165, 202);
 }
 
@@ -299,7 +406,7 @@ textarea.form-control {
   padding-bottom: 15px;
 }
 
-.secondlineofpostinputar{
+.secondlineofpostinputar {
   display: flex;
   align-items: center;
   width: 100%;
@@ -308,78 +415,118 @@ textarea.form-control {
   font-size: small;
 }
 
-.gapfromside{
+.gapfromside {
   margin-right: 5px;
 }
 
-#postAreaid{
+#postAreaid {
   width: 815px;
-height: 367px;
-background: #FFFFFF;
-border-radius: 8px;
+  height: 367px;
+  background: #FFFFFF;
+  border-radius: 8px;
 }
 
-.postimg{
+.postimg {
   width: 80px;
-height: 80px;
-
-background: url(../assests/avatar.png);
-filter: drop-shadow(1px 4px 4px rgba(0, 0, 0, 0.25));
-border-radius: 100%;
+  height: 80px;
+  background: url(../assests/avatar.png);
+  filter: drop-shadow(1px 4px 4px rgba(0, 0, 0, 0.25));
+  border-radius: 100%;
 }
 
-.firstdivofpost{
+.firstdivofpost {
+  position:  relative;
   display: flex;
   align-items: center;
   border-bottom: 2px solid #AFAFAF;
   padding-bottom: 5px;
+  justify-content: left;
 }
 
-.colomnwalakam{
+.deleteoreditdiv{
+  font-size: larger;
+  margin-top: -40px;
+  position: absolute;
+  right: 2%;
+}
+
+.deleteoreditdiv:hover .deleteoreditdropdown{
+  display: inline;
+  position: absolute;
+  right: 5%;
+  /* margin-left: -30px; */
+}
+
+.deleteoreditdropdown{
+  border-radius: 5px;
+  box-shadow: 1px 5px 4px rgba(0, 0, 0, 0.25);
+  list-style: none;
+  margin-left: 10px;
+  display: none;
+  width: 200px;
+  padding: 10px;
+  background-color: rgb(226, 226, 226);
+}
+
+.deleteoreditdropdown li{
+  width: 100%;
+  height: max-content;
+  padding-left: 10px;
+}
+
+.deleteoreditdropdown li:hover{
+  border-radius: 5px;
+  background-color: rgb(255, 255, 255);
+}
+
+.colomnwalakam {
   display: flex;
   flex-direction: column;
   margin-left: 10px;
 }
 
-.span1offirslline{
+.span1offirslline {
   font-weight: bold;
   font-size: 20px;
   margin-bottom: 5px;
 }
 
-.span2offirslline, .span3offirslline{
+.span2offirslline,
+.span3offirslline {
   font-size: small;
 }
 
-.seconddivofpost{
+.seconddivofpost {
   margin: 15px 5px 30px 15px;
   font-weight: normal;
   color: black;
 }
 
-.thirddivofpost{
+.thirddivofpost {
   width: 100%;
   display: flex;
   justify-content: space-around;
 }
-.thirdarafirstline{
-  position: sticky;
+
+.thirdarafirstline {
+  position: static;
   top: 118px;
-width: 288px;
-height: max-content;
-background: #FFFFFF;
-box-shadow: 1px 5px 4px rgba(0, 0, 0, 0.25);
-border-radius: 8px;
-display: flex;
-flex-direction: column;
-align-items: center;
-justify-content: start;
-padding-top: 15px;
-padding-bottom: 10px;
+  width: 288px;
+  height: max-content;
+  margin-bottom: 5vh;
+  background: #FFFFFF;
+  box-shadow: 1px 5px 4px rgba(0, 0, 0, 0.25);
+  border-radius: 8px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: start;
+  padding-top: 15px;
+  padding-bottom: 10px;
 }
 
-.thirdareasecondline{
-  position: sticky;
+.thirdareasecondline {
+  position: static;
   top: 500px;
   width: 288px;
   height: max-content;
@@ -392,43 +539,45 @@ padding-bottom: 10px;
   justify-content: start;
   padding-top: 15px;
   padding-bottom: 40px;
+  margin-bottom: 10px;
 }
 
-.requestdiv{
+.requestdiv {
   display: flex;
   flex-direction: column;
   align-items: start;
   background: #D2FCFF;
   width: 80%;
-  padding:10px;
+  padding: 10px;
   border-radius: 8px;
 }
 
-.inputwaligagah{
+.inputwaligagah {
   border-bottom: 2px solid #AFAFAF;
   width: 95%;
   padding: 0px 0px 10px 40px;
   margin-bottom: 20px;
 }
 
-.messagefriend{
+.messagefriend {
   display: flex;
   margin-bottom: 5px;
 }
 
-.messagefriend img{
+.messagefriend img {
   border-radius: 100%;
   border: 1px solid black;
   margin-right: 10px;
 }
 
-.descriptofmessagefriend h5{
-  font-weight:bolder;
+.descriptofmessagefriend h5 {
+  font-weight: bolder;
   font-size: 18px;
 }
-.boxstylekabhaikabhai{
+
+.boxstylekabhaikabhai {
   background-color: #f8f9fa;
-  position: sticky;
+  position: static;
   width: 300px;
   border-radius: 5px;
   padding: 10px;
@@ -438,12 +587,12 @@ padding-bottom: 10px;
   min-height: 50vh;
   top: 350px;
   display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-around;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
 }
 
-.boxstylekaparentelement{
+.boxstylekaparentelement {
   /* position: relative; */
   display: flex;
   flex-direction: column;
@@ -452,48 +601,48 @@ padding-bottom: 10px;
   padding-top: 10px;
 }
 
-.hoverwaladiv{
+.hoverwaladiv {
   width: 100%;
   text-align: center;
   font-size: x-large;
-  font-weight:bold;
+  font-weight: bold;
   padding: 10px;
 }
 
-.hoverwaladiv i{
+.hoverwaladiv i {
   margin-right: 10px;
   color: #05B6C1;
 }
 
-.hoverwaladiv:hover{
+.hoverwaladiv:hover {
   background-color: #05B6C1;
-  color:white;
+  color: white;
 }
 
-.removebgcolor{
-  color:white !important;
+.removebgcolor {
+  color: white !important;
 }
 
 
-.firstdivofthirdaradiv{
+.firstdivofthirdaradiv {
   display: flex;
 }
 
-.firstdivofthirdaradiv img{
+.firstdivofthirdaradiv img {
   border-radius: 100%;
   margin-right: 5px;
   align-items: center;
   justify-content: center;
 }
 
-.acceptOrDenied{
+.acceptOrDenied {
   width: 100%;
   display: flex;
   justify-content: space-evenly;
   margin-top: 2px;
 }
 
-.acceptOrDenied input[type = "button"]{
+.acceptOrDenied input[type="button"] {
   color: white;
   width: 40%;
   border-radius: 8px;
@@ -501,6 +650,67 @@ padding-bottom: 10px;
   height: 30px;
 }
 
-.removeborderandbackground{
+.removeborderandbackground {
   background-color: white !important;
 }
+
+.nextpagebtn {
+  border: none;
+  padding: 5px 10px;
+  color: white;
+  background-color: #05B6C1;
+  display: block;
+  margin-top: 20px;
+  border-radius: 8px;
+  font-weight: bold;
+}
+
+.editdeleteofimg{
+  width: 60px;
+  height: 60px;
+  margin: 10px 20px;
+  border-radius: 10px;
+}
+
+.modalbodyofedit{
+  width: 100vw;
+  height:100vh;
+  background-color: rgba(0, 0, 0, 20%);
+  position: fixed;
+  top: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 20;
+}
+
+.editdeleteoffirstline{
+  display: flex;
+  align-items: center;
+  padding-bottom: 20px;
+  border-bottom: 3px solid #05B6C1;
+  margin-bottom: 20px;
+}
+
+
+@media (max-width:1088px) {
+  .row {
+    justify-content: left;
+    padding-left: 20px;
+  }
+}
+
+@media (max-width:820px) {
+  .row {
+    justify-content: center;
+    padding-left: auto;
+    padding-right: auto;
+  }
+}
+
+@media (max-width:290px) {
+  * {
+    font-size: 1.2rem !important;
+  }
+}
+
