--- a/Dashbord/style.css
+++ b/Dashbord/style.css
@@ -253,7 +253,7 @@ body {
 .modalbody,
 .modaltwoboy {
   background-color: rgba(0, 0, 0, 0.25);
-  position: sticky;
+  position: fixed;
   top: 0;
   left: 0;
   width: 100vw;
@@ -265,7 +265,7 @@ body {
 }
 
 .modalbody {
-  position: absolute !important;
+  position: fixed !important;
 }
 
 .modalofedit{
